--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1634,7 +1634,7 @@ LeadSummaryScreen As screen:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="shlrf_customercontact"
-                        Default: =ThisItem.'CustomerContact '
+                        Default: =varPhoneNumber
                         DisplayMode: =Parent.DisplayMode
                         DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customercontact")
                         Fill: =RGBA(0, 0, 0, 0)
@@ -1728,6 +1728,7 @@ LeadSummaryScreen As screen:
                             RadiusTopRight: =0
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Tooltip: ="Customer Phone Number"
+                            Visible: =false
                             Width: =Parent.Width - 120
                             X: =70
                             Y: =lblContactES_1.Y + lblContactES_1.Height + 5
@@ -1744,11 +1745,122 @@ LeadSummaryScreen As screen:
                             OnSelect: =Set(varContactNumber,false);
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: =VarformattedNumberSummary
-                            Visible: =varContactNumber
+                            Visible: =false
                             Width: =IntxtContactNumberES_1.Width
                             X: =IntxtContactNumberES_1.X
                             Y: =IntxtContactNumberES_1.Y
                             ZIndex: =6
+
+                        tog_phonenumberlength_2 As slider:
+                            Default: =Len(txtphonenumber_2.Text)
+                            Max: =10
+                            OnChange: |
+                                =Set(
+                                    varPhoneNumber,
+                                    With(
+                                        {
+                                            // extracts all numbers from the phone number field
+                                            varTextNumbersOnly: Concat(
+                                                MatchAll(
+                                                    txtphonenumber_2.Text,
+                                                    Match.Digit
+                                                ),
+                                                FullMatch
+                                            ),
+                                            // builds a table with phone number format at every position
+                                            varPhoneNumberFormat: With(
+                                                {varTextPhoneNumberFormat: txtPhonenumberformat_2.Text},
+                                                With(
+                                                    {
+                                                        varTablePhoneNumberFormat: ForAll(
+                                                            Sequence(Len(varTextPhoneNumberFormat)),
+                                                            With(
+                                                                {
+                                                                    varNumberCurrentLength: Left(
+                                                                        varTextPhoneNumberFormat,
+                                                                        Value
+                                                                    )
+                                                                },
+                                                                {
+                                                                    NumberFormat: varNumberCurrentLength,
+                                                                    CountNumbers: CountRows(
+                                                                        MatchAll(
+                                                                            varNumberCurrentLength,
+                                                                            "0"
+                                                                        )
+                                                                    )
+                                                                }
+                                                            )
+                                                        )
+                                                    },
+                                                    ForAll(
+                                                        Sequence(
+                                                            Max(
+                                                                varTablePhoneNumberFormat,
+                                                                CountNumbers
+                                                            )
+                                                        ),
+                                                        LookUp(
+                                                            varTablePhoneNumberFormat,
+                                                            CountNumbers = Value
+                                                        )
+                                                    )
+                                                )
+                                            )
+                                        },
+                                        Text(
+                                            Value(varTextNumbersOnly),
+                                            LookUp(
+                                                varPhoneNumberFormat,
+                                                CountNumbers = Len(varTextNumbersOnly),
+                                                NumberFormat
+                                            )
+                                        )
+                                    )
+                                );
+                                Reset(txtphonenumber_2);
+                            Visible: =false
+                            X: =52
+                            Y: =104
+                            ZIndex: =7
+
+                        txtPhonenumberformat_2 As text:
+                            Default: ="(000)-000-0000"
+                            Height: =44
+                            Visible: =false
+                            Width: =708
+                            X: =19
+                            Y: =65
+                            ZIndex: =8
+
+                        txtphonenumber_2 As text:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            BorderThickness: =1
+                            Default: =Parent.Default
+                            DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                            DisabledFill: =RGBA(255, 255, 255, 1)
+                            DisplayMode: =Parent.DisplayMode
+                            Font: =Font.Arial
+                            HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
+                            HoverBorderColor: =RGBA(202, 202, 202, 1)
+                            HoverFill: =RGBA(255, 255, 255, 1)
+                            MaxLength: |
+                                =Len(txtPhonenumberformat_2.Text)
+                            OnChange: =Set(varCustomerPhonenumber,true);If(Len(txtphonenumber_2.Text)=14,Set(varContactNumber,true);Set(VarPhonenumbererrormessage,false);,If(!IsBlank(txtphonenumber_2.Text) && Len(txtphonenumber_2.Text)<>14,Set(VarPhonenumbererrormessage,true);Set(varContactNumber,false);));
+                            OnSelect: |-
+                                =Set(varCustomerPhonenumber,true);
+                                If(varContactNumber=true,Set(varContactNumber,true));
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Tooltip: =Parent.DisplayName
+                            Width: =Parent.Width - 100
+                            X: =68
+                            Y: =lblContactES.Y + lblContactES.Height + 5
+                            ZIndex: =9
 
                 "glryImageLSS As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
@@ -1837,7 +1949,8 @@ LeadSummaryScreen As screen:
                             IsBlank(IntxtUnitCountLSS.Text) || IsBlank(IntxtUnitDescriptionLSS.Text) || IsBlank(CboxScopeLSS) || IsBlank(IntxtEstimatedHoursLSS.Text) || IsBlank(IntxtNotesLSS.Text) || If(
                                 CboxCCLSS.Value = true,
                                 IsBlank(IntxtCustomerNameLSS)) || If(
-                                CboxCCLSS.Value = true,IsBlank(lblContactNumber_1)&& Len(IntxtContactNumberES_1) <> 10) ||If(
+                                CboxCCLSS.Value = true,IsBlank(txtphonenumber_2)) || If(
+                                CboxCCLSS.Value = true,Len(txtphonenumber_2) <> 14) ||If(
                                 cboxAELSS.Value = true,
                                 IsBlank(IntxtTotalEstimatedExpenseLSS)
                             ) || If(
