--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -294,16 +294,24 @@ ChatScreen As screen:
                     DisabledBorderColor: =RGBA(255, 0, 0, 1)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisabledFill: =RGBA(255, 255, 255, 1)
-                    DisplayMode: =DisplayMode.Disabled
                     Fill: =RGBA(255, 255, 255, 1)
+                    FocusedBorderThickness: =1
                     Font: =Font.Arial
                     FontWeight: =FontWeight.Normal
                     Height: =28
-                    OnSelect: =Select(Parent)
+                    HoverColor: =RGBA(0, 0, 0, 1)
+                    HoverFill: =Self.Fill
+                    OnSelect: |-
+                        =Set(VarUserName,ThisItem.FromName);
+                        //(VartoolTip,ThisItem.FromName)
+                        UpdateContext({VartoolTip:true})
                     PaddingBottom: =0
                     PaddingLeft: =0
                     PaddingRight: =0
                     PaddingTop: =0
+                    PressedBorderColor: =Self.BorderColor
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
@@ -316,11 +324,65 @@ ChatScreen As screen:
                             Find(" ", ThisItem.FromName) + 1,
                             1)
                     Tooltip: =ThisItem.FromName
-                    Visible: =If(ThisItem.IsQQApp=true,true,false)
+                    Visible: |-
+                        =If(ThisItem.IsQQApp=true && ThisItem.IsSelected && !( locInfoExpanded)
+                        ,true,false)
                     Width: =28
                     X: =15
                     Y: =15
                     ZIndex: =5
+
+                Label1 As label:
+                    Fill: =RGBA(255, 255, 255, 1)
+                    OnSelect: =Select(Parent)
+                    Text: =ThisItem.FromName
+                    Visible: =ThisItem.IsSelected && VartoolTip
+                    X: =40
+                    Y: =24
+                    ZIndex: =6
+
+                Button1_1 As button:
+                    BorderColor: =Color.Red
+                    BorderThickness: =1
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledBorderColor: =RGBA(255, 0, 0, 1)
+                    DisabledColor: =RGBA(0, 0, 0, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    Fill: =RGBA(255, 255, 255, 1)
+                    FocusedBorderThickness: =1
+                    Font: =Font.Arial
+                    FontWeight: =FontWeight.Normal
+                    Height: =28
+                    HoverColor: =RGBA(0, 0, 0, 1)
+                    HoverFill: =Self.Fill
+                    OnSelect: |-
+                        =Set(VarUserName,ThisItem.FromName);
+                        //(VartoolTip,ThisItem.FromName)
+                        UpdateContext({VartoolTip:false})
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    PressedBorderColor: =Self.BorderColor
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
+                    RadiusBottomLeft: =50
+                    RadiusBottomRight: =50
+                    RadiusTopLeft: =50
+                    RadiusTopRight: =50
+                    Size: =If(Parent.Width<500,9,Parent.Width>500,10)
+                    Text: |-
+                        =Left(ThisItem.FromName, 1) &
+                        Mid(
+                            ThisItem.FromName,
+                            Find(" ", ThisItem.FromName) + 1,
+                            1)
+                    Tooltip: =ThisItem.FromName
+                    Visible: =If(ThisItem.IsQQApp=true && ThisItem.IsSelected && !(locInfoExpanded),true,false)
+                    Width: =28
+                    X: =15
+                    Y: =15
+                    ZIndex: =7
 
             Group1 As group:
                 Height: =5
