--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -325,21 +325,12 @@ ChatScreen As screen:
                             1)
                     Tooltip: =ThisItem.FromName
                     Visible: |-
-                        =If(ThisItem.IsQQApp=true && ThisItem.IsSelected && !( locInfoExpanded)
+                        =If(ThisItem.IsQQApp=true && !( ThisItem.IsSelected && VartoolTip)
                         ,true,false)
                     Width: =28
                     X: =15
                     Y: =15
                     ZIndex: =5
-
-                Label1 As label:
-                    Fill: =RGBA(255, 255, 255, 1)
-                    OnSelect: =Select(Parent)
-                    Text: =ThisItem.FromName
-                    Visible: =ThisItem.IsSelected && VartoolTip
-                    X: =40
-                    Y: =24
-                    ZIndex: =6
 
                 Button1_1 As button:
                     BorderColor: =Color.Red
@@ -378,10 +369,26 @@ ChatScreen As screen:
                             Find(" ", ThisItem.FromName) + 1,
                             1)
                     Tooltip: =ThisItem.FromName
-                    Visible: =If(ThisItem.IsQQApp=true && ThisItem.IsSelected && !(locInfoExpanded),true,false)
+                    Visible: =If(ThisItem.IsQQApp=true && ThisItem.IsSelected && VartoolTip,true,false)
                     Width: =28
                     X: =15
                     Y: =15
+                    ZIndex: =6
+
+                Label1 As label:
+                    AutoHeight: =true
+                    BorderColor: =RGBA(255, 0, 0, 1)
+                    BorderThickness: =1
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Font: =Font.Arial
+                    Height: =30
+                    OnSelect: =Select(Parent)
+                    Size: =If(Parent.Width<500,9,Parent.Width>500,11)
+                    Text: =ThisItem.FromName
+                    Visible: =ThisItem.IsSelected && VartoolTip
+                    Width: =If(Parent.Width>500,Parent.Width/5,Parent.Width/2.2)
+                    X: =45
+                    Y: =Label8_2.Y
                     ZIndex: =7
 
             Group1 As group:
